# github-analytics-mcp

./: .dockerignore  .gitignore  .setup-complete  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROGRESS.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_api.py  test_basic.py  test_mcp_server.py  test_real_api.py
.github/workflows/: README.md  cd.yml  ci.yml  docker-build.yml
api/: Dockerfile  __init__.py  dependencies.py  main.py  models.py  routes.py
docs/adr/: ADR-001-dual-interface.md  ADR-002-exception-hierarchy.md  ADR-003-multi-stage-docker.md  ADR-004-terraform-and-kubectl.md  ADR-005-hpa-configuration.md
k8s/: configmap.yaml  deploy.sh  deployment-api.yaml  deployment-mcp.yaml  hpa-api.yaml  ingress.yaml  namespace.yaml  secret.yaml  service-api.yaml
src/: __init__.py  github_client.py  server.py
src/tools/: __init__.py  commits.py  contributors.py  languages.py  repo_stats.py
terraform/: README.md  kubernetes.tf  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: test_tools.py
